// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolver graph layout when rendering no nodes renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {},
}
`;

exports[`resolver graph layout when rendering one node renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two forks, and one fork has an extra long tine renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Array [
      Array [
        0,
        -0.8164965809277259,
      ],
      Array [
        70.71067811865476,
        -41.641325627314025,
      ],
    ],
    Array [
      Array [
        -70.71067811865476,
        -123.29098372008661,
      ],
      Array [
        212.13203435596427,
        40.00833246545857,
      ],
    ],
    Array [
      Array [
        -70.71067811865476,
        -123.29098372008661,
      ],
      Array [
        0,
        -164.1158127664729,
      ],
    ],
    Array [
      Array [
        212.13203435596427,
        40.00833246545857,
      ],
      Array [
        282.842712474619,
        -0.8164965809277259,
      ],
    ],
    Array [
      Array [
        0,
        -164.1158127664729,
      ],
      Array [
        70.71067811865476,
        -204.9406418128592,
      ],
    ],
    Array [
      Array [
        0,
        -245.76547085924548,
      ],
      Array [
        141.4213562373095,
        -164.1158127664729,
      ],
    ],
    Array [
      Array [
        0,
        -245.76547085924548,
      ],
      Array [
        70.71067811865476,
        -286.5902999056318,
      ],
    ],
    Array [
      Array [
        141.4213562373095,
        -164.1158127664729,
      ],
      Array [
        212.13203435596427,
        -204.9406418128592,
      ],
    ],
    Array [
      Array [
        282.842712474619,
        -0.8164965809277259,
      ],
      Array [
        353.5533905932738,
        -41.64132562731401,
      ],
    ],
    Array [
      Array [
        282.842712474619,
        -82.4661546737003,
      ],
      Array [
        424.26406871192853,
        -0.8164965809277259,
      ],
    ],
    Array [
      Array [
        282.842712474619,
        -82.4661546737003,
      ],
      Array [
        353.5533905932738,
        -123.29098372008661,
      ],
    ],
    Array [
      Array [
        424.26406871192853,
        -0.8164965809277259,
      ],
      Array [
        494.9747468305833,
        -41.64132562731404,
      ],
    ],
    Array [
      Array [
        494.9747468305833,
        -41.64132562731404,
      ],
      Array [
        636.3961030678928,
        -123.2909837200866,
      ],
    ],
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      0,
      -164.1158127664729,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 2,
        "unique_ppid": 0,
      },
    } => Array [
      282.842712474619,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 3,
        "unique_ppid": 1,
      },
    } => Array [
      70.71067811865476,
      -286.5902999056318,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 4,
        "unique_ppid": 1,
      },
    } => Array [
      212.13203435596427,
      -204.9406418128592,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 5,
        "unique_ppid": 2,
      },
    } => Array [
      353.5533905932738,
      -123.29098372008661,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 6,
        "unique_ppid": 2,
      },
    } => Array [
      494.9747468305833,
      -41.64132562731404,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 7,
        "unique_ppid": 6,
      },
    } => Array [
      636.3961030678928,
      -123.2909837200866,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two nodes, one being the parent of the other renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Array [
      Array [
        0,
        -0.8164965809277259,
      ],
      Array [
        141.4213562373095,
        -82.46615467370032,
      ],
    ],
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      141.4213562373095,
      -82.46615467370032,
    ],
  },
}
`;
